# arenabuddy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  index.html  release-plz.toml
.github/workflows/: check.yml  checks.yml  ci.yml  deploy-server.yml  release-plz.yml  release.yml
.sqlx/: query-14ecf6c5726cbe02881683c768b49210d38f1e37592293a2b6c659a12b8a7f1d.json  query-18aed11cc6bf67090ef240adf0dcd29ab22d0ab041bb9319687625cfbcefa94d.json  query-3e4a626530c88bea91ec0865526e620c4a25b19fe03b1f33390d4e0f73b241b3.json  query-4e3ea524475e4203b883132b40fdcb686fb42f36496b9542e899ae0fa8a78c54.json  query-5bbd988e034d16f703262ecb56f0e5bebcb921c360774389fd3fd548a35c7b75.json  query-93d9d9858fc512e8b4f823ef85ad62e2b9adc4f8a7acfe68c272c60ad2c1256f.json  query-9e487dea5ce3fe958877863259f82ed74818a579a43ccf8f56bfa983f347ef39.json  query-a4a7eb205e0bbc7ad4c2a5e4928e90a0fa71eb2e7b1f64c663193dfc32f66524.json
.zed/: format.sh  settings.json
ap_core/src/: cards.rs
ap_core/src/models/: deck.rs
arenabuddy/assets/: tailwind.css
arenabuddy/src/: errors.rs  main.rs
arenabuddy/src/app/: cards.rs  match_details.rs  mod.rs  pages.rs
arenabuddy/src/backend/: auth.rs  auth_controller.rs  grpc_writer.rs  ingest.rs  launch.rs  mod.rs  service.rs  sync.rs
arenabuddy_cli/: CHANGELOG.md  Cargo.toml
arenabuddy_cli/src/: arenabuddy.rs  card_converter.rs  main.rs
arenabuddy_cli/src/commands/: convert.rs  definitions.rs  info.rs  mod.rs  parse.rs  process.rs  repl.rs  scrape.rs
arenabuddy_core/: CHANGELOG.md  Cargo.toml  build.rs
arenabuddy_core/src/: cards.rs  errors.rs  lib.rs  match_insights.rs  processor.rs  proto.rs  proto_utils.rs  replay.rs  storage.rs  storage_backends.rs
arenabuddy_core/src/display/: card.rs  deck.rs  game.rs  match_details.rs  mulligan.rs
arenabuddy_core/src/models/: card.rs  deck.rs  mana.rs  match_result.rs  mod.rs  mtga_match.rs  mulligan.rs
arenabuddy_core/src/mtga_events/: business.rs  client.rs  gre.rs  mgrsc.rs  primitives.rs
arenabuddy_core/tests/: test_primitives.rs
arenabuddy_data/: CHANGELOG.md  Cargo.toml
arenabuddy_data/src/: db.rs  directory.rs  error.rs  errors.rs  lib.rs  storage.rs
arenabuddy_data/src/db/: postgres.rs
arenabuddy_scraper/: CHANGELOG.md  Cargo.toml  deprecated.md
arenabuddy_scraper/src/: clean.rs  lib.rs  main.rs  process.rs  scrape.rs
cli/src/: lib.rs
cli/src/commands/: deck.rs  definitions.rs  load_cards.rs  metagame.rs  mod.rs  parse.rs  scrape.rs  scrape_mtga.rs  scryfall.rs
core/data/: cards-full.pb
core/src/display/: event_log.rs  match_summary.rs  stats.rs
core/src/events/: client.rs  gre.rs  macros.rs  mod.rs
core/src/models/: card.rs  deck.rs  mulligan.rs
core/src/player_log/: draft.rs  event_log.rs  processor.rs  replay.rs
core/src/proto/: convert.rs
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs
data/: Cargo.toml
data/migrations/postgres/: 20260520000000_add_card_table.sql  20260521000000_add_decklist_views.sql
data/src/: lib.rs
data/src/db/: auth_repository.rs  card_postgres.rs  card_repository.rs  metagame_postgres.rs  mod.rs  postgres.rs
metagame/src/scraper/: tournament.rs
server/: Dockerfile  docker-compose.yml  promtail.yaml
server/grafana/provisioning/dashboards/: dashboards.yml  decklists.json
server/grafana/provisioning/datasources/: datasources.yml
server/src/: auth.rs  lib.rs  match_service.rs  otel.rs
src/: app.rs  debug_logs.rs  error_logs.rs  main.rs  match_details.rs  matches.rs
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/data/: cards-examples.json
src-tauri/src/: card.rs  deck.rs  ingest.rs  lib.rs  log_collector.rs  main.rs
src-tauri/src/commands/: debug_logs.rs  error_logs.rs  match_details.rs  matches.rs  mod.rs
src/components/: cost.rs  deck_list.rs  match_info.rs  mod.rs  mulligan_display.rs
styles/: output.css
web/: Dockerfile
web/src/: main.rs
