[package]
name = "arenabuddy_ui"
description = "UI for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true


[dependencies]
arenabuddy_core = { path = "arenabuddy_core/", version = "0.3.3" }
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
leptos_router = { workspace = true, features = ["tracing"] }

[workspace]
resolver = "2"
members = [
    "src-tauri",
    "arenabuddy_core",
    "arenabuddy_cli",
    "arenabuddy_scraper",
]

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
categories = []
version = "0.3.3"
repository = "https://github.com/gazure/arenabuddy"
edition = "2024"
rust-version = "1.86"
keywords = ["magic"]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1.0.97"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
clap = { version = "4.5.35", features = ["derive"] }
csv = { version = "1.3.1" }
derive_builder = "0.20.2"
indoc = "2.0.6"
include_dir = "0.7.4"
itertools = "0.14.0"
js-sys = "0.3"
lazy_static = "1.5.0"
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7.8", features = ["tracing"] }
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
reqwest = "0.12.15"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
tokio = { version = "1.44.1", features = ["full"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
