[package]
name = "arenabuddy_ui"
description = "UI for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true


[dependencies]
arenabuddy_core = { path = "arenabuddy_core/", version = "0.5.11" }
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
leptos_router = { workspace = true, features = ["tracing"] }

[workspace]
resolver = "2"
members = ["src-tauri", "arenabuddy_core", "arenabuddy_cli", "arenabuddy_data"]

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
categories = []
version = "0.5.11"
repository = "https://github.com/gazure/arenabuddy"
edition = "2024"
rust-version = "1.88"
keywords = ["magic"]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.94.0"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
ctrlc = "3.4.7"
clap = { version = "4.5.39", features = ["derive"] }
csv = { version = "1.3.1" }
derive_builder = "0.20.2"
indoc = "2.0.6"
include_dir = "0.7.4"
itertools = "0.14.0"
js-sys = "0.3"
lazy_static = "1.5.0"
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8.3", features = ["tracing"] }
notify = "8.0.0"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
reqwest = { version = "0.12.19", features = ["json", "stream"] }
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
rusqlite_migration = { version = "2.1.0", features = ["from-directory"] }
rustyline = "16.0.0"
tokio = { version = "1.46.1", features = ["full"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
