[workspace]
members = [
    "cli",
    "core",
    "data",
    "arenabuddy",
    "server",
    "web",
    "metagame",
]
resolver = "3"

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
description = "MTGA companion app"
categories = []
version = "0.1.0"
repository = "https://github.com/gazure/arenabuddy"
edition = "2024"
rust-version = "1.94"
keywords = []
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
axum = "0.8.8"
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde", "wasmbind"] }
clap = { version = "4.6.0", features = ["derive"] }
console-subscriber = "0.5.0"
csv = { version = "1.4.0" }
ctrlc = "3.5.2"
derive_builder = "0.20.2"
dirs = "6.0.0"
dioxus = { version = "0.7.3" }
google-sheets4 = { version = "7.0.0" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
itertools = "0.14.0"
notify = "8.2.0"
open = "5.3"
postgresql_embedded = { version = "0.20.2", features = ["bundled"] }
prost = "0.14.3"
prost-build = { version = "0.14.3", features = ["format"] }
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["tls-ring", "tls-native-roots"] }
tonic-build = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
rand = "0.10.0"
regex = "1.12.3"
rfd = { version = "0.17.2", default-features = false }
reqwest = { version = "0.13.2", features = [
    "form",
    "json",
    "stream",
    "query",
    "default-tls",
] }
rusqlite = { version = "=0.36", features = ["bundled"] }
rustyline = "17.0.2"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.149"
sqlx = { version = "0.9.0-alpha.1", features = [
    "chrono",
    "uuid",
    "postgres",
    "runtime-tokio",
    "sqlx-toml",
    "rust_decimal",
] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "grpc-tonic",
    "trace",
] }
urlencoding = "2.1.3"
uuid = { version = "1.22.0", features = ["v4", "js"] }
yup-oauth2 = { version = "12.1.2", features = [
    "hyper-rustls",
    "service-account",
    "ring",
] }

[profile.dev]
opt-level = 1

[profile.ci]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
