[package]
name = "arenabuddy_cli"
authors.workspace = true
categories.workspace = true
description = "parse player.log to match.json files"
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
crossbeam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
arenabuddy_core = { path = "../arenabuddy_core", version = "0.2.3" }

[[bin]]
name = "arenaparser"
path = "src/main.rs"
