[package]
name = "arenabuddy_cli"
authors.workspace = true
categories.workspace = true
description = "parse player.log to match.json files"
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = {workspace = true}
clap = { workspace = true }
csv = { workspace = true }
ctrlc = { workspace = true }
crossbeam = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
rustyline = "16.0.0"
arenabuddy_core = { path = "../arenabuddy_core", version = "0.5.6" }

[[bin]]
name = "arenabuddy"
path = "src/main.rs"
