[package]
name = "arenabuddy_core"
description = "core modules for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
include_dir = { workspace = true }
derive_builder = { workspace = true }
indoc = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
rusqlite_migration = { workspace = true, features = ["from-directory"] }
