
[package]
name = "arenabuddy_scraper"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ap_core = { path = "../ap_core" }
anyhow = { workspace = true }
csv = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "abscraper"
path = "src/main.rs"
