[package]
name = "arenabuddy"
version = "0.1.0"
description = "A Tauri App"
authors = ["Grant Azure <azure.grant@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arenabuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ap_core = {path = "../ap_core"}
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.89"
chrono = "0.4.38"
crossbeam = "0.8.4"
indoc = "2.0.5"
itertools = "0.13.0"
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
notify = "6.1.1"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
