[package]
name = "arenabuddy"
description = "An MTGA companion app"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arenabuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arenabuddy_core = { path = "../arenabuddy_core", version = "0.5.11" }
arenabuddy_data = { path = "../arenabuddy_data", version = "0.5.11" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
